# custom_ros_msgs_framework

./: CMakeLists.txt  README.md  package.xml
msg/: DetectionResult.msg  Object.msg
