<?xml version="1.0"?>
<package format="2">
  <name>custom_ros_msgs_framework</name>
  <version>0.0.1</version>
  <description>
    Custom ros messages framework.
  </description>

  <maintainer email="marius.grimm93@web.de">Marius Grimm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>